--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1,5 +1,7 @@
 # 一、experience
 
+# 🧨🧨JavaEE🧨🧨
+
 # 🎈🎈经验总结🎈🎈
 
 ## 1、类与对象
@@ -1074,7 +1076,7 @@ public class DoubleLinkedListDemo {
 
 4、参数不同：重载的参数个数、参数类型、参数的顺序可以不同，重写父类子方法参数必须相同
 
-5、修饰不同：重载对修饰范围没有要求，重写要求重写方法的修饰范围大于被重写方法的修饰范围
+5、修饰不同：重载对修饰范围没有要求，重写要求重写方法的修饰范围不小于被重写方法的修饰范围
 
 6、重写的子类返回值类型、参数类型、异常范围要小于等于父类的
 
@@ -3832,9 +3834,640 @@ private static void testGroup() {
 
 
 
-# 🧨🧨🧨🧨
+# 🧨🧨MySQL🧨🧨
 
-# 分割线
+# 🎈🎈查询
+
+## 数据库文件
+
+~~~sql
+DROP DATABASE IF EXISTS `sql_invoicing`;
+CREATE DATABASE `sql_invoicing`; 
+USE `sql_invoicing`;
+
+SET NAMES utf8 ;
+SET character_set_client = utf8mb4 ;
+
+CREATE TABLE `payment_methods` (
+  `payment_method_id` tinyint(4) NOT NULL AUTO_INCREMENT,
+  `name` varchar(50) NOT NULL,
+  PRIMARY KEY (`payment_method_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=5 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `payment_methods` VALUES (1,'Credit Card');
+INSERT INTO `payment_methods` VALUES (2,'Cash');
+INSERT INTO `payment_methods` VALUES (3,'PayPal');
+INSERT INTO `payment_methods` VALUES (4,'Wire Transfer');
+
+CREATE TABLE `clients` (
+  `client_id` int(11) NOT NULL,
+  `name` varchar(50) NOT NULL,
+  `address` varchar(50) NOT NULL,
+  `city` varchar(50) NOT NULL,
+  `state` char(2) NOT NULL,
+  `phone` varchar(50) DEFAULT NULL,
+  PRIMARY KEY (`client_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `clients` VALUES (1,'Vinte','3 Nevada Parkway','Syracuse','NY','315-252-7305');
+INSERT INTO `clients` VALUES (2,'Myworks','34267 Glendale Parkway','Huntington','WV','304-659-1170');
+INSERT INTO `clients` VALUES (3,'Yadel','096 Pawling Parkway','San Francisco','CA','415-144-6037');
+INSERT INTO `clients` VALUES (4,'Kwideo','81674 Westerfield Circle','Waco','TX','254-750-0784');
+INSERT INTO `clients` VALUES (5,'Topiclounge','0863 Farmco Road','Portland','OR','971-888-9129');
+
+CREATE TABLE `invoices` (
+  `invoice_id` int(11) NOT NULL,
+  `number` varchar(50) NOT NULL,
+  `client_id` int(11) NOT NULL,
+  `invoice_total` decimal(9,2) NOT NULL,
+  `payment_total` decimal(9,2) NOT NULL DEFAULT '0.00',
+  `invoice_date` date NOT NULL,
+  `due_date` date NOT NULL,
+  `payment_date` date DEFAULT NULL,
+  PRIMARY KEY (`invoice_id`),
+  KEY `FK_client_id` (`client_id`),
+  CONSTRAINT `FK_client_id` FOREIGN KEY (`client_id`) REFERENCES `clients` (`client_id`) ON DELETE RESTRICT ON UPDATE CASCADE
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `invoices` VALUES (1,'91-953-3396',2,101.79,0.00,'2019-03-09','2019-03-29',NULL);
+INSERT INTO `invoices` VALUES (2,'03-898-6735',5,175.32,8.18,'2019-06-11','2019-07-01','2019-02-12');
+INSERT INTO `invoices` VALUES (3,'20-228-0335',5,147.99,0.00,'2019-07-31','2019-08-20',NULL);
+INSERT INTO `invoices` VALUES (4,'56-934-0748',3,152.21,0.00,'2019-03-08','2019-03-28',NULL);
+INSERT INTO `invoices` VALUES (5,'87-052-3121',5,169.36,0.00,'2019-07-18','2019-08-07',NULL);
+INSERT INTO `invoices` VALUES (6,'75-587-6626',1,157.78,74.55,'2019-01-29','2019-02-18','2019-01-03');
+INSERT INTO `invoices` VALUES (7,'68-093-9863',3,133.87,0.00,'2019-09-04','2019-09-24',NULL);
+INSERT INTO `invoices` VALUES (8,'78-145-1093',1,189.12,0.00,'2019-05-20','2019-06-09',NULL);
+INSERT INTO `invoices` VALUES (9,'77-593-0081',5,172.17,0.00,'2019-07-09','2019-07-29',NULL);
+INSERT INTO `invoices` VALUES (10,'48-266-1517',1,159.50,0.00,'2019-06-30','2019-07-20',NULL);
+INSERT INTO `invoices` VALUES (11,'20-848-0181',3,126.15,0.03,'2019-01-07','2019-01-27','2019-01-11');
+INSERT INTO `invoices` VALUES (13,'41-666-1035',5,135.01,87.44,'2019-06-25','2019-07-15','2019-01-26');
+INSERT INTO `invoices` VALUES (15,'55-105-9605',3,167.29,80.31,'2019-11-25','2019-12-15','2019-01-15');
+INSERT INTO `invoices` VALUES (16,'10-451-8824',1,162.02,0.00,'2019-03-30','2019-04-19',NULL);
+INSERT INTO `invoices` VALUES (17,'33-615-4694',3,126.38,68.10,'2019-07-30','2019-08-19','2019-01-15');
+INSERT INTO `invoices` VALUES (18,'52-269-9803',5,180.17,42.77,'2019-05-23','2019-06-12','2019-01-08');
+INSERT INTO `invoices` VALUES (19,'83-559-4105',1,134.47,0.00,'2019-11-23','2019-12-13',NULL);
+
+CREATE TABLE `payments` (
+  `payment_id` int(11) NOT NULL AUTO_INCREMENT,
+  `client_id` int(11) NOT NULL,
+  `invoice_id` int(11) NOT NULL,
+  `date` date NOT NULL,
+  `amount` decimal(9,2) NOT NULL,
+  `payment_method` tinyint(4) NOT NULL,
+  PRIMARY KEY (`payment_id`),
+  KEY `fk_client_id_idx` (`client_id`),
+  KEY `fk_invoice_id_idx` (`invoice_id`),
+  KEY `fk_payment_payment_method_idx` (`payment_method`),
+  CONSTRAINT `fk_payment_client` FOREIGN KEY (`client_id`) REFERENCES `clients` (`client_id`) ON UPDATE CASCADE,
+  CONSTRAINT `fk_payment_invoice` FOREIGN KEY (`invoice_id`) REFERENCES `invoices` (`invoice_id`) ON UPDATE CASCADE,
+  CONSTRAINT `fk_payment_payment_method` FOREIGN KEY (`payment_method`) REFERENCES `payment_methods` (`payment_method_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=9 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `payments` VALUES (1,5,2,'2019-02-12',8.18,1);
+INSERT INTO `payments` VALUES (2,1,6,'2019-01-03',74.55,1);
+INSERT INTO `payments` VALUES (3,3,11,'2019-01-11',0.03,1);
+INSERT INTO `payments` VALUES (4,5,13,'2019-01-26',87.44,1);
+INSERT INTO `payments` VALUES (5,3,15,'2019-01-15',80.31,1);
+INSERT INTO `payments` VALUES (6,3,17,'2019-01-15',68.10,1);
+INSERT INTO `payments` VALUES (7,5,18,'2019-01-08',32.77,1);
+INSERT INTO `payments` VALUES (8,5,18,'2019-01-08',10.00,2);
+
+
+DROP DATABASE IF EXISTS `sql_store`;
+CREATE DATABASE `sql_store`;
+USE `sql_store`;
+
+CREATE TABLE `products` (
+  `product_id` int(11) NOT NULL AUTO_INCREMENT,
+  `name` varchar(50) NOT NULL,
+  `quantity_in_stock` int(11) NOT NULL,
+  `unit_price` decimal(4,2) NOT NULL,
+  PRIMARY KEY (`product_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=11 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `products` VALUES (1,'Foam Dinner Plate',70,1.21);
+INSERT INTO `products` VALUES (2,'Pork - Bacon,back Peameal',49,4.65);
+INSERT INTO `products` VALUES (3,'Lettuce - Romaine, Heart',38,3.35);
+INSERT INTO `products` VALUES (4,'Brocolinni - Gaylan, Chinese',90,4.53);
+INSERT INTO `products` VALUES (5,'Sauce - Ranch Dressing',94,1.63);
+INSERT INTO `products` VALUES (6,'Petit Baguette',14,2.39);
+INSERT INTO `products` VALUES (7,'Sweet Pea Sprouts',98,3.29);
+INSERT INTO `products` VALUES (8,'Island Oasis - Raspberry',26,0.74);
+INSERT INTO `products` VALUES (9,'Longan',67,2.26);
+INSERT INTO `products` VALUES (10,'Broom - Push',6,1.09);
+
+
+CREATE TABLE `shippers` (
+  `shipper_id` smallint(6) NOT NULL AUTO_INCREMENT,
+  `name` varchar(50) NOT NULL,
+  PRIMARY KEY (`shipper_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=6 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `shippers` VALUES (1,'Hettinger LLC');
+INSERT INTO `shippers` VALUES (2,'Schinner-Predovic');
+INSERT INTO `shippers` VALUES (3,'Satterfield LLC');
+INSERT INTO `shippers` VALUES (4,'Mraz, Renner and Nolan');
+INSERT INTO `shippers` VALUES (5,'Waters, Mayert and Prohaska');
+
+
+CREATE TABLE `customers` (
+  `customer_id` int(11) NOT NULL AUTO_INCREMENT,
+  `first_name` varchar(50) NOT NULL,
+  `last_name` varchar(50) NOT NULL,
+  `birth_date` date DEFAULT NULL,
+  `phone` varchar(50) DEFAULT NULL,
+  `address` varchar(50) NOT NULL,
+  `city` varchar(50) NOT NULL,
+  `state` char(2) NOT NULL,
+  `points` int(11) NOT NULL DEFAULT '0',
+  PRIMARY KEY (`customer_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=11 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `customers` VALUES (1,'Babara','MacCaffrey','1986-03-28','781-932-9754','0 Sage Terrace','Waltham','MA',2273);
+INSERT INTO `customers` VALUES (2,'Ines','Brushfield','1986-04-13','804-427-9456','14187 Commercial Trail','Hampton','VA',947);
+INSERT INTO `customers` VALUES (3,'Freddi','Boagey','1985-02-07','719-724-7869','251 Springs Junction','Colorado Springs','CO',2967);
+INSERT INTO `customers` VALUES (4,'Ambur','Roseburgh','1974-04-14','407-231-8017','30 Arapahoe Terrace','Orlando','FL',457);
+INSERT INTO `customers` VALUES (5,'Clemmie','Betchley','1973-11-07',NULL,'5 Spohn Circle','Arlington','TX',3675);
+INSERT INTO `customers` VALUES (6,'Elka','Twiddell','1991-09-04','312-480-8498','7 Manley Drive','Chicago','IL',3073);
+INSERT INTO `customers` VALUES (7,'Ilene','Dowson','1964-08-30','615-641-4759','50 Lillian Crossing','Nashville','TN',1672);
+INSERT INTO `customers` VALUES (8,'Thacher','Naseby','1993-07-17','941-527-3977','538 Mosinee Center','Sarasota','FL',205);
+INSERT INTO `customers` VALUES (9,'Romola','Rumgay','1992-05-23','559-181-3744','3520 Ohio Trail','Visalia','CA',1486);
+INSERT INTO `customers` VALUES (10,'Levy','Mynett','1969-10-13','404-246-3370','68 Lawn Avenue','Atlanta','GA',796);
+
+
+CREATE TABLE `order_statuses` (
+  `order_status_id` tinyint(4) NOT NULL,
+  `name` varchar(50) NOT NULL,
+  PRIMARY KEY (`order_status_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `order_statuses` VALUES (1,'Processed');
+INSERT INTO `order_statuses` VALUES (2,'Shipped');
+INSERT INTO `order_statuses` VALUES (3,'Delivered');
+
+
+CREATE TABLE `orders` (
+  `order_id` int(11) NOT NULL AUTO_INCREMENT,
+  `customer_id` int(11) NOT NULL,
+  `order_date` date NOT NULL,
+  `status` tinyint(4) NOT NULL DEFAULT '1',
+  `comments` varchar(2000) DEFAULT NULL,
+  `shipped_date` date DEFAULT NULL,
+  `shipper_id` smallint(6) DEFAULT NULL,
+  PRIMARY KEY (`order_id`),
+  KEY `fk_orders_customers_idx` (`customer_id`),
+  KEY `fk_orders_shippers_idx` (`shipper_id`),
+  KEY `fk_orders_order_statuses_idx` (`status`),
+  CONSTRAINT `fk_orders_customers` FOREIGN KEY (`customer_id`) REFERENCES `customers` (`customer_id`) ON UPDATE CASCADE,
+  CONSTRAINT `fk_orders_order_statuses` FOREIGN KEY (`status`) REFERENCES `order_statuses` (`order_status_id`) ON UPDATE CASCADE,
+  CONSTRAINT `fk_orders_shippers` FOREIGN KEY (`shipper_id`) REFERENCES `shippers` (`shipper_id`) ON UPDATE CASCADE
+) ENGINE=InnoDB AUTO_INCREMENT=11 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `orders` VALUES (1,6,'2019-01-30',1,NULL,NULL,NULL);
+INSERT INTO `orders` VALUES (2,7,'2018-08-02',2,NULL,'2018-08-03',4);
+INSERT INTO `orders` VALUES (3,8,'2017-12-01',1,NULL,NULL,NULL);
+INSERT INTO `orders` VALUES (4,2,'2017-01-22',1,NULL,NULL,NULL);
+INSERT INTO `orders` VALUES (5,5,'2017-08-25',2,'','2017-08-26',3);
+INSERT INTO `orders` VALUES (6,10,'2018-11-18',1,'Aliquam erat volutpat. In congue.',NULL,NULL);
+INSERT INTO `orders` VALUES (7,2,'2018-09-22',2,NULL,'2018-09-23',4);
+INSERT INTO `orders` VALUES (8,5,'2018-06-08',1,'Mauris enim leo, rhoncus sed, vestibulum sit amet, cursus id, turpis.',NULL,NULL);
+INSERT INTO `orders` VALUES (9,10,'2017-07-05',2,'Nulla mollis molestie lorem. Quisque ut erat.','2017-07-06',1);
+INSERT INTO `orders` VALUES (10,6,'2018-04-22',2,NULL,'2018-04-23',2);
+
+
+CREATE TABLE `order_items` (
+  `order_id` int(11) NOT NULL AUTO_INCREMENT,
+  `product_id` int(11) NOT NULL,
+  `quantity` int(11) NOT NULL,
+  `unit_price` decimal(4,2) NOT NULL,
+  PRIMARY KEY (`order_id`,`product_id`),
+  KEY `fk_order_items_products_idx` (`product_id`),
+  CONSTRAINT `fk_order_items_orders` FOREIGN KEY (`order_id`) REFERENCES `orders` (`order_id`) ON UPDATE CASCADE,
+  CONSTRAINT `fk_order_items_products` FOREIGN KEY (`product_id`) REFERENCES `products` (`product_id`) ON UPDATE CASCADE
+) ENGINE=InnoDB AUTO_INCREMENT=11 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `order_items` VALUES (1,4,4,3.74);
+INSERT INTO `order_items` VALUES (2,1,2,9.10);
+INSERT INTO `order_items` VALUES (2,4,4,1.66);
+INSERT INTO `order_items` VALUES (2,6,2,2.94);
+INSERT INTO `order_items` VALUES (3,3,10,9.12);
+INSERT INTO `order_items` VALUES (4,3,7,6.99);
+INSERT INTO `order_items` VALUES (4,10,7,6.40);
+INSERT INTO `order_items` VALUES (5,2,3,9.89);
+INSERT INTO `order_items` VALUES (6,1,4,8.65);
+INSERT INTO `order_items` VALUES (6,2,4,3.28);
+INSERT INTO `order_items` VALUES (6,3,4,7.46);
+INSERT INTO `order_items` VALUES (6,5,1,3.45);
+INSERT INTO `order_items` VALUES (7,3,7,9.17);
+INSERT INTO `order_items` VALUES (8,5,2,6.94);
+INSERT INTO `order_items` VALUES (8,8,2,8.59);
+INSERT INTO `order_items` VALUES (9,6,5,7.28);
+INSERT INTO `order_items` VALUES (10,1,10,6.01);
+INSERT INTO `order_items` VALUES (10,9,9,4.28);
+
+CREATE TABLE `sql_store`.`order_item_notes` (
+  `note_id` INT NOT NULL,
+  `order_Id` INT NOT NULL,
+  `product_id` INT NOT NULL,
+  `note` VARCHAR(255) NOT NULL,
+  PRIMARY KEY (`note_id`));
+
+INSERT INTO `order_item_notes` (`note_id`, `order_Id`, `product_id`, `note`) VALUES ('1', '1', '2', 'first note');
+INSERT INTO `order_item_notes` (`note_id`, `order_Id`, `product_id`, `note`) VALUES ('2', '1', '2', 'second note');
+
+
+DROP DATABASE IF EXISTS `sql_hr`;
+CREATE DATABASE `sql_hr`;
+USE `sql_hr`;
+
+
+CREATE TABLE `offices` (
+  `office_id` int(11) NOT NULL,
+  `address` varchar(50) NOT NULL,
+  `city` varchar(50) NOT NULL,
+  `state` varchar(50) NOT NULL,
+  PRIMARY KEY (`office_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `offices` VALUES (1,'03 Reinke Trail','Cincinnati','OH');
+INSERT INTO `offices` VALUES (2,'5507 Becker Terrace','New York City','NY');
+INSERT INTO `offices` VALUES (3,'54 Northland Court','Richmond','VA');
+INSERT INTO `offices` VALUES (4,'08 South Crossing','Cincinnati','OH');
+INSERT INTO `offices` VALUES (5,'553 Maple Drive','Minneapolis','MN');
+INSERT INTO `offices` VALUES (6,'23 North Plaza','Aurora','CO');
+INSERT INTO `offices` VALUES (7,'9658 Wayridge Court','Boise','ID');
+INSERT INTO `offices` VALUES (8,'9 Grayhawk Trail','New York City','NY');
+INSERT INTO `offices` VALUES (9,'16862 Westend Hill','Knoxville','TN');
+INSERT INTO `offices` VALUES (10,'4 Bluestem Parkway','Savannah','GA');
+
+
+
+CREATE TABLE `employees` (
+  `employee_id` int(11) NOT NULL,
+  `first_name` varchar(50) NOT NULL,
+  `last_name` varchar(50) NOT NULL,
+  `job_title` varchar(50) NOT NULL,
+  `salary` int(11) NOT NULL,
+  `reports_to` int(11) DEFAULT NULL,
+  `office_id` int(11) NOT NULL,
+  PRIMARY KEY (`employee_id`),
+  KEY `fk_employees_offices_idx` (`office_id`),
+  KEY `fk_employees_employees_idx` (`reports_to`),
+  CONSTRAINT `fk_employees_managers` FOREIGN KEY (`reports_to`) REFERENCES `employees` (`employee_id`),
+  CONSTRAINT `fk_employees_offices` FOREIGN KEY (`office_id`) REFERENCES `offices` (`office_id`) ON UPDATE CASCADE
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `employees` VALUES (37270,'Yovonnda','Magrannell','Executive Secretary',63996,NULL,10);
+INSERT INTO `employees` VALUES (33391,'D\'arcy','Nortunen','Account Executive',62871,37270,1);
+INSERT INTO `employees` VALUES (37851,'Sayer','Matterson','Statistician III',98926,37270,1);
+INSERT INTO `employees` VALUES (40448,'Mindy','Crissil','Staff Scientist',94860,37270,1);
+INSERT INTO `employees` VALUES (56274,'Keriann','Alloisi','VP Marketing',110150,37270,1);
+INSERT INTO `employees` VALUES (63196,'Alaster','Scutchin','Assistant Professor',32179,37270,2);
+INSERT INTO `employees` VALUES (67009,'North','de Clerc','VP Product Management',114257,37270,2);
+INSERT INTO `employees` VALUES (67370,'Elladine','Rising','Social Worker',96767,37270,2);
+INSERT INTO `employees` VALUES (68249,'Nisse','Voysey','Financial Advisor',52832,37270,2);
+INSERT INTO `employees` VALUES (72540,'Guthrey','Iacopetti','Office Assistant I',117690,37270,3);
+INSERT INTO `employees` VALUES (72913,'Kass','Hefferan','Computer Systems Analyst IV',96401,37270,3);
+INSERT INTO `employees` VALUES (75900,'Virge','Goodrum','Information Systems Manager',54578,37270,3);
+INSERT INTO `employees` VALUES (76196,'Mirilla','Janowski','Cost Accountant',119241,37270,3);
+INSERT INTO `employees` VALUES (80529,'Lynde','Aronson','Junior Executive',77182,37270,4);
+INSERT INTO `employees` VALUES (80679,'Mildrid','Sokale','Geologist II',67987,37270,4);
+INSERT INTO `employees` VALUES (84791,'Hazel','Tarbert','General Manager',93760,37270,4);
+INSERT INTO `employees` VALUES (95213,'Cole','Kesterton','Pharmacist',86119,37270,4);
+INSERT INTO `employees` VALUES (96513,'Theresa','Binney','Food Chemist',47354,37270,5);
+INSERT INTO `employees` VALUES (98374,'Estrellita','Daleman','Staff Accountant IV',70187,37270,5);
+INSERT INTO `employees` VALUES (115357,'Ivy','Fearey','Structural Engineer',92710,37270,5);
+
+
+DROP DATABASE IF EXISTS `sql_inventory`;
+CREATE DATABASE `sql_inventory`;
+USE `sql_inventory`;
+
+
+CREATE TABLE `products` (
+  `product_id` int(11) NOT NULL AUTO_INCREMENT,
+  `name` varchar(50) NOT NULL,
+  `quantity_in_stock` int(11) NOT NULL,
+  `unit_price` decimal(4,2) NOT NULL,
+  PRIMARY KEY (`product_id`)
+) ENGINE=InnoDB AUTO_INCREMENT=11 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+INSERT INTO `products` VALUES (1,'Foam Dinner Plate',70,1.21);
+INSERT INTO `products` VALUES (2,'Pork - Bacon,back Peameal',49,4.65);
+INSERT INTO `products` VALUES (3,'Lettuce - Romaine, Heart',38,3.35);
+INSERT INTO `products` VALUES (4,'Brocolinni - Gaylan, Chinese',90,4.53);
+INSERT INTO `products` VALUES (5,'Sauce - Ranch Dressing',94,1.63);
+INSERT INTO `products` VALUES (6,'Petit Baguette',14,2.39);
+INSERT INTO `products` VALUES (7,'Sweet Pea Sprouts',98,3.29);
+INSERT INTO `products` VALUES (8,'Island Oasis - Raspberry',26,0.74);
+INSERT INTO `products` VALUES (9,'Longan',67,2.26);
+INSERT INTO `products` VALUES (10,'Broom - Push',6,1.09);
+
+
+~~~
+
+
+
+## 1、单表查询
+
+### 1.1 select查询
+
+```sql
+select * from customers;
+select * from customers where customer_id=1;
+select * from customers order by 
+```
+
+- Select：用来挑选要查询的列
+- from：查询哪一张表
+- where：声明查询条件
+- order：根据哪些字段进行排序
+
+一条完整的SQL是由多个子句组成的，各个子句都是需要按照指定的顺序排列的，否则会出现语法错误而无法执行。
+
+### 1.2 select子句
+
+```sql
+-- 挑选指定的列进行查询
+select first_name,last_name from customers;
+
+-- 列与列可以调换顺序，结果展示的时候也会出现相应的变化
+select last_name,first_name from customers;
+
+-- 特定的列可以结合数学表达式一起使用
+select first_name,last_name,points,points*0.9 from customers;
+
+-- 为了在查看数据的时候方便对某列进行理解，可以对列使用as取别名
+select first_name,last_name,points,points*0.9 as discount from customers;
+
+-- 如果别名中含有空格，需要使用单引号包含起来
+select first_name,last_name,points,points*0.9 as '折 扣' from customers;
+
+-- 使用distinct修饰列名进行去重查询
+select distinct state from customers;
+
+-- 练习：查询商品表（名称、单价、1.1倍单价-别名‘新单价’）
+```
+
+### 1.3 where子句
+
+`where`子句用来对查询结果根据条件进行筛选：
+
+- 首先遍历所有结果
+- 然后对每一条结果，应用条件进行检测
+- 如果条件满足（`true`），就会返回这条记录到最终结果集
+
+```sql
+-- >、>=、<、<=、=、!=、<>
+select * from customers where points>3000;
+select * from customers where state='VA';
+select * from customers where birth_date>'1990-01-01';
+
+-- 练习：查询2019年发生的所有订单
+
+-- 使用and、or、not组合多个条件
+select * from customers where birth_date>'1990-01-01' and points>1000;
+select * from customers where birth_date>'1990-01-01' or points>1000;
+
+-- and优先级大于or
+select * from customers where birth_date>'1990-01-01' or points>1000 and state='va';
+
+-- 使用括号让语义更清晰
+select * from customers where birth_date>'1990-01-01' or (points>1000 and state='va');
+-- not取反
+select * from customers where not(birth_date>'1990-01-01' or points>1000);
+select * from customers where (birth_date<='1990-01-01' and points<=1000);
+
+-- 练习：查询订单明细表，提取订单编号为6，且总价大于30的记录
+
+-- in表示一定范围
+select * from customers where state in('va','ga','fl');
+select * from customers where state not in('va','ga','fl');
+
+-- 练习：查询商品表，提取库存为49、38或72的记录
+
+-- between，包含左右边界值
+select * from customers where points between 1000 and 3000;
+
+-- 练习：查询客户中生日在1990/1/1到2000/1/1之间的所有记录
+
+-- like进行模糊查询，%任意多个任意字符 _任意一个字符
+select * from customers where last_name like 'b%'; -- 以b开头
+select * from customers where last_name like '%b%'; -- 含有b字母
+select * from customers where last_name like '%b'; -- 以b结尾
+
+-- 练习：查询客户信息，地址中包含trail或avenue
+
+-- 练习：查询客户信息，电话号码以9结尾的
+
+-- 正则表达式查询
+-- ^ 字符串开始
+-- $ 字符串结束
+-- | 逻辑或
+select * from customers where last_name regexp '^field|mac';
+select * from customers where last_name regexp 'field$|mac';
+select * from customers where last_name regexp '[gim]e';
+select * from customers where last_name regexp '[a-h]e';
+
+-- 练习
+-- first_name 中有 elka 或 ambur
+-- last_name 中有 ey 或 on
+-- last_name 以 my 开头 或 包含 se
+-- last_name 包含 br 或 bu
+
+-- null查询
+select * from customers where phone is null;
+select * from customers where phone is not null;
+
+-- 练习 找出没有发货的订单
+
+```
+
+### 1.4 order by子句
+
+```sql
+select * from customers order by first_name;
+select * from customers order by first_name desc;
+select * from customers order by state,first_name;
+
+-- 练习 查询订单编号为2的订单详情，按照订单总价降序排列
+```
+
+### 1.5 limit子句（分页查询）
+
+```sql
+-- limit size;
+-- limit offset, size
+select * from customers limit 0,3;
+
+-- 练习 找出积分前三的用户
+
+```
+
+## 2、多表查询
+
+### 2.1 内连接
+
+```sql
+-- 查询订单和相应的客户信息
+select order_id,o.customer_id,first_name,last_name
+	from orders o join customers c
+	on o.customer_id = c.customer_id;
+	
+-- 练习 查询订单详情表，显示商品名称信息
+```
+
+### 2.2 自连接
+
+```sql
+-- 查询每个员工和他们的管理者
+select e.employee_id,e.first_name,m.employee_id,m.first_name
+	from employee e join employee m
+	on e.reports_to = m.employee_id;
+```
+
+### 2.3 合并多个表
+
+```sql
+-- 查询订单表，同时显示相应的客户信息和订单状态信息
+select o.order_id,o.order_date,c.first_name,c.last_name,os.name
+	from orders o
+	join customers c on o.customer_id = c.customer_id
+	join order_statuses os on o.status = os.order_status_id;
+	
+-- 练习 查询支付表，同时显示支付方式和客户信息
+
+```
+
+### 2.4 组合关联查询
+
+在`order_items`中，`order_id`和`product_id`是不足以单独标示唯一性的，必须组合起来才能。也即是表中的数据，不存在两个完全一样的组合。
+
+```sql
+select *
+	from order_items oi
+	join order_item_notes oin
+	on oi.order_id = oin.order_id and oi.product_id = oin.product_id;
+```
+
+### 2.5 隐式关联查询
+
+```sql
+select * from orders o,customers c where o.customer_id = c.customer_id;
+```
+
+### 2.6 外连接
+
+```sql
+select c.customer_id,c.first_name,o.order_id
+	from customer c
+	left join orders o
+	on c.customer_id = o.customer_id
+	order by c.customer_id;
+```
+
+在`SQL`中分为左连接和右连接两种，当为左连接查询时，左表的记录无论连接条件是否成立，都会作为结果返回，右连接同理。
+
+```sql
+-- 练习 查询商品及其订购的次数和数量
+```
+
+### 2.7 多表外连接
+
+```sql
+-- 查询 商品的订购数量与相应的物流信息
+select c.customer_id,c.first_name,o.order_id,s.name
+	from customer c
+	left join orders o
+	on c.customer_id = o.customer_id
+	left join shippers s
+	on o.shipper_id = s.shipper_id
+	order by c.customer_id;
+	
+-- 练习 查询订单及其相应的客户和物流状态信息
+```
+
+### 2.8 自外连接
+
+```sql
+-- 查询所有的雇员及其管理者
+select e.employee_id,e.first_name,m.first_name
+	from employees e
+	left join employees m
+	on e.employee_id = m.employee_id;
+```
+
+### 2.9 using从句
+
+```sql
+select o.order_id,c.first_name
+	from orders o
+	join customers c
+	-- on o.customer_id = c.customer_id
+	using (customer_id);
+	
+-- 同样适用于组合关联查询
+select * from order_items io join order_item_notes oin using (order_id,product_id);
+
+-- 练习 查询支付表，显示对应的客户和支付方式信息
+```
+
+### 2.10 自然连接
+
+```sql
+select * from customers natural join orders;
+```
+
+在自然连接中，数据库会自动匹配相同的列作为连接条件
+
+### 2.11 交叉连接
+
+```sql
+select c.first_name,p.name from customers c cross join products p;
+select c.first_name,p.name from customers c , products p;
+```
+
+在交叉连接中，左表的每条记录都会与右表的每条记录进行连接。
+
+### 2.12 联合查询
+
+联合查询用来连接两个查询结果集
+
+```sql
+select order_id,order_date, 'active' from orders where order_date>='2019-01-01'
+union
+select order_id,order_date, 'archived' from orders where order_date<'2019-01-01'
+
+-- 也可以用来联合不同的表
+select first_name from customers
+union
+select name from shippers;
+```
+
+> 需要注意的是每个查询返回的列数要一致
+
+```sql
+-- 练习 根据用户的积分进行金银铜的分级
+```
+
+### 2.13 in
+
+~~~sql
+-- 查询从来没有订单的商品信息
+select * from products
+	where product_id not in (select distinct product_id from order_items);
+	
+-- 练习 查询没有发票记录的客户
+~~~
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 # 🧨🧨🧨🧨
 
@@ -3890,3 +4523,4 @@ private static void testGroup() {
 
 
 
+ 
