--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -4449,7 +4449,277 @@ select * from products
 
 
 
+## 3、增删改
 
+### 3.1 列属性
+
+- Column：列名称，一般用蛇形命名法
+- Datatype：数据类型
+- PK：主键，每一张表都有主键
+- NN：非空属性
+- AI：自动增长列
+- Default：默认值
+
+### 3.2 insert
+
+```sql
+-- 插入一行数据
+insert into customers 
+	values(default,'John','Smith','2020-01-01',null,'address','city','CA',200);
+	
+insert into customers (first_name,last_name,birth_date,address,city,state)
+	values('John','Smith','2020-01-01','address','city','CA');
+	
+-- 在插入数据的时候，对应的列名可以打乱顺序，相应的values部分，也应该相应调整顺序
+
+-- 插入多行数据
+insert into shippers(name) values('shipper1'),('shipper2');
+
+-- 练习 向products表中插入3条记录
+
+-- 向多张表插入数据
+insert into orders(customer_id,order_date,status)
+	values(1,'2021-06-01',1);
+
+insert into order_items 
+	values(last_insert_id(),1,1,2.95),(last_insert_id(),2,1,3.95);
+	
+-- copy一张表的数据
+create table orders_archived as
+	select * from orders;
+	
+insert into orders_archived 
+	select * from orders where order_date<'1990-01-01';
+	
+-- 练习 copy invoices表，client_id替换为名字，payment_date不为null
+
+```
+
+### 3.3 update
+
+```sql
+-- 更新一条记录
+update invoices 
+	set payment_total=10,payment_date='2020-03-01' where invoice_id=1;
+
+update invoices 
+	set payment_total=invoice_total*0.5,payment_date=due_date where invoice_id=3;
+	
+-- 更新多条记录语法与上一致，只是条件不一样，在开发中比较少见，谨慎使用
+
+-- 练习 更新customers表，给1990年之前生的客户+50分
+
+-- 使用子查询进行更新
+update invoices 
+	set payment_total=10,payment_date='2020-03-01' 
+	where invoice_id=(select client_id from clients where name='Myworks');
+	
+update invoices 
+	set payment_total=10,payment_date='2020-03-01' 
+	where invoice_id in(select client_id from clients where state in('CA','NY'));
+	
+-- 练习 更新orders表coments为金牌客户，条件为客户积分超过3000分
+```
+
+### 3.4 delete
+
+```sql
+delete from invoices where invoice_id=1;
+
+delete from invoices 
+	where client_id=(select client_id from clients where name='Myworks');
+```
+
+## 4、统计查询
+
+### 4.1 聚合函数
+
+聚合函数属于内置函数的一种，它需要接收一些参数，然后再合并为一个结果。
+
+```sql
+select
+		max(invoice_total),min(invoice_total),avg(invoice_total),
+		sum(invoice_total),count(invoice_total) 
+		from invoices;
+		
+-- 注意，以上函数只能作用于非空的列，并且重复值也会计算在内
+select count(*) from invoices; 
+select count(distinct client_id) from invoices;
+
+-- 练习 查询2019年上半年、下半年及整年的总销售额invoice_total、总收款额payment_total、总应收额
+```
+
+### 4.2 分组查询
+
+```sql
+-- 按照客户对销售总额进行分组查询
+select client_id,sum(invoice_total) as total_sales from invoices
+	where invoice_date>='2019-07-01'
+	group by client_id
+	order by total_sales desc;
+	
+-- 按照州和城市对销售总额进行分组查询
+select state,c
+ity,sum(invoice_total) as total_sales 
+	from invoices i
+	join clients using(client_id)
+	group by state,city
+
+-- 练习 根据日期、付款方式对付款总额进行分组查询
+
+-- having子句
+-- 根据客户id对销售总额进行分组查询，筛选出付款总额大于500的数据
+select client_id,sum(invoice_total) as total_sales
+	from invoices
+	group by client_id
+	having total_sales>500;
+	
+-- 根据客户id对销售总额进行分组查询，筛选出付款总额大于500的数据，且发票总数大于5的数据
+select client_id,sum(invoice_total) as total_sales,count(*) as numbers
+	from invoices
+	group by client_id
+	having total_sales>500 and numbers>5;
+	
+-- 查询客户在VA，且开销大于100元的客户信息
+
+-- with rollup
+select client_id,sum(invoice_total) as total_sales from invoices
+	group by client_id
+	with rollup;
+-- rollup 操作符只作用于聚合函数列
+
+select state,city,sum(invoice_total) as total_sales 
+	from invoices i
+	join clients using(client_id)
+	group by state,city with rollup;
+	
+-- 查询各种支付方式的累计值（使用rollup操作符的时候，group by不能用别名）
+```
+
+
+
+## 5、高级查询
+
+### 5.1 子查询
+
+
+子查询就是包含在另一个查询语句里面的查询
+
+```sql
+-- 查询价格比Lettuce(id=3)贵的商品
+select * from products 
+	where unit_price > (select unit_price from products where product_id=3);
+	
+-- 练习 查询工资高于平均水平的员工信息
+```
+
+### 5.2 in
+
+```sql
+-- 查询从来没有订单的商品信息
+select * from products
+	where product_id not in (select distinct product_id from order_items);
+	
+-- 练习 查询没有发票记录的客户
+```
+
+### 5.3 子查询 vs 连接查询
+
+```sql
+-- 查询没有发票记录的客户
+select * from clients left join invoices using(client_id) where invoice_id is null;
+```
+
+几乎所有的子查询都可以使用连接查询来实现，在具体使用哪一种查询时，我们主要从以下两个方面来考虑：
+
+- 查询性能
+- 查询语句的可读性
+
+```sql
+-- 练习 找出订购了生菜的客户信息（使用两种查询方式来实现）
+```
+
+### 5.4 all & any(some)
+
+```sql
+-- 查询所有大于id=3的客户发票金额（取最大）的发票记录
+select * from invoices where invoice_total >
+	(select max(invocie_total) from invoices where client_id=3);
+
+select * from invoices where invoice_total >
+	all (select invocie_total from invoices where client_id=3);
+	
+-- 查询所有大于id=3的客户发票金额（只要大于其中某一条）的发票记录
+select * from invoices where invoice_total >
+	any (select invoice_total from invoices where client_id=3);
+
+-- 查询至少有2条发票记录的客户
+select * from clients where client_id in
+	(select client_id from invocies group by client_id having count(*)>=2);
+	
+select * from clients where client_id = any
+	(select client_id from invocies group by client_id having count(*)>=2);
+```
+
+### 5.5 关联子查询
+
+子查询的条件关联到主查询，子查询不能独立执行。
+
+```sql
+-- 查询薪资水平高于部门平均水平的员工信息
+select * from employees e where salary > 
+	(select avg(salary) from employees where office_id = e.office_id);
+```
+
+- 非关联子查询：子查询条件独立，先进行子查询，然后进行主查询，子查询只进行一次。
+- 关联子查询：子查询条件关联外部记录，因此先进行主查询，然后进行子查询。由于子查询会执行多次，如果数据量大的话，查询性能会较慢。
+
+```sql
+-- 练习 查询客户发票记录中高于这个当前客户平均发票金额水平的所有发票记录
+```
+
+### 5.6 exists
+
+```sql
+-- 找出有发票记录的客户信息
+select * from clients where client_id in (select distinct client_id from invoices);
+
+select * from clients c where
+	exists (select client_id from invoices where client_id = c.client_id);
+```
+
+如果在`in`后面的子查询返回的是一个较大的结果集，那么使用`exists`会相对性能较好。因为针对后者，子查询是不会将结果集返回给外部查询，而只是检测结果的真假。
+
+```sql
+-- 练习 查询从未被订购过的商品信息
+```
+
+### 5.7 select从句中的子查询
+
+```sql
+-- 查询每条发票记录的金额、平均发票金额以及两者的差额
+select invoice_id,invoice_total,
+	(select avg(invoice_total) from invoices) as invoice_avg,
+	invoice_total - (select invoice_avg) as diff
+	from invoices
+	
+-- 练习 查询客户的id、名称、总销售额、平均销售额及两者差额
+```
+
+### 5.8 from从句中的子查询
+
+```sql
+-- 从上述练习所述的查询中，提炼出有发票记录的数据
+select * from (
+	select client_id,name,
+		(select sum(invoice_total) from invoices where client_id = c.client_id) total,
+    (select avg(invoice_total) from invoices) avg,
+    (select total-avg) diff
+    from clients c
+) summary where total is not null;
+```
+
+> 我们可以把子查询所查到的记录当作一个虚拟表，基于它，可以继续查询、连接查询等。
 
 
 
