--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -4725,6 +4725,384 @@ select * from (
 
 
 
+## 6、事务与并发
+
+### 6.1 简介
+
+事务就是一组负责某一部分工作的SQL代码，所有的语句必须成功执行，否则事务就会失败。
+
+例如：银行转帐，包含从一个账户转出金额，从一个账户转入金额，这两个槽走都必须成功执行，否则就会出现账户不平衡，如果只有某一个操作成功，那么就需要进行回滚或者撤销所有操作。
+
+事务使用的场景：我们希望所有的修改都要完成，并将它们视为一个整体操作。
+
+例如：我们需要在订单发生的时候，既要向订单表中新增一条记录，还需要向订单明细表中添加记录。如果其中一个操作成功，而另一个操作失败，那么就会得到一个不完整的订单信息。
+
+事务的特性`ACID`：
+
+- `Atomicity`原子性，事务就像原子一样，各个操作合为一体，不可拆分
+- `Consistency`一致性，我们的数据永远保持一致，例如我们不会保存没有商品的订单信息。
+- `Isolation`隔离性，事务之间是相互隔离的，特别是它们要修改同一个数据的时候，它们之间互相不受影响。如果多个事务要修改同一份数据，这个数据就会被锁定，每次只能有一个事务有权修改。
+- `Durability`持久性，一旦一个事务被提交，它的修改就是永久性的，任何特殊情况比如停电，都不会影响这种数据修改。
+
+### 6.2 创建
+
+```sql
+-- 创建订单信息
+start transaction;
+
+insert into orders(customer_id,order_date,status)
+	values(1,'2019-01-01',1);
+	
+insert into order_items values(last_insert_id(),1,1,1);
+
+commit;
+
+-- 如果在向order_items表插入数据的时候断开数据库连接，那么前面的操作都将回滚
+
+-- MySQL默认将所有单独的CRUD语句包装成一个事务，并且执行自动提交
+show variables like 'autocommit%';
+```
+
+### 6.3 并发与锁定
+
+在现实中，一个数据有可能被多个用户同时进行访问或者修改，这就是我们所说的并发。
+
+```sql
+-- 窗口1
+start transaction;
+update customers set points = points + 10 where customer_id = 1;
+commit;
+
+-- 窗口2
+start transaction;
+update customers set points = points + 10 where customer_id = 1;
+commit;
+
+-- 当窗口1执行完update但是并未提交时，执行窗口2的代码至update，会发现一只处于等待状态
+-- 当我们执行第一次更新的时候，MySQL将数据锁定了，如果其它的事务想要更新同一条数据，它就需要等待，直到第一个事务提交或者回滚来释放锁。
+```
+
+并发带来的问题：
+
+- `Lost Updates`丢失修改：当2个事务修改同一份数据而不使用锁时，会发生这种情况，后一个事务的修改会把前一次事务的修改覆盖掉。
+- `Dirty Reads`脏读：事务读取还没有提交的数据时，事务A对数据发生了修改，而事务B在A提交之前读取了A修改的数据，但是最后A回滚了，那么B读取的数据就是无效的。
+- `Non-repeating Reads`不可重复读：在一次事务A中2次读取同一份数据，但是事务B在A的2次读取之间对这份数据进行了修改和提交，那么事务A的2次读取结果将会不一样。简言之，一个事务读取同一条记录，会出现两个不同的状态值，又称为ABA事件。
+- `Phanton Reads`幻读：事务B对数据进行了修改，在B提交之前，事务A根据条件查询出若干条记录，但是在B提交之后，使得某些数据之前不符合A的要求，但是B修改提交后符合要求了。
+
+
+
+### 6.4 事务隔离级别
+
+|                  | Lost Updates | Dirty Reads | Non-repeating Reads | Phanton Reads |
+| :--------------: | :----------: | :---------: | :-----------------: | :-----------: |
+| Read Uncommitted |              |             |                     |               |
+|  Read Committed  |              |      Y      |                     |               |
+| Repeatable Read* |      Y       |      Y      |          Y          |               |
+|   Serializable   |      Y       |      Y      |          Y          |       Y       |
+
+事务隔离级别越高，使用的锁也会越多，越需要牺牲性能和体验
+
+```sql
+-- 查看事务隔离级别
+show variables like 'transaction_isolation';
+
+-- 修改
+-- 下一次（且只有下一次）事务生效，直到当前事务完毕
+set transaction isolation level serializable; 
+set session transaction isolation level serializable; -- 只在当前会话生效
+set global transaction isolation level serializable; -- 全局生效
+```
+
+#### 6.4.1 Read uncommitted
+
+脏读演示
+
+```sql
+-- session 1
+set transaction isolation level read uncommitted;
+select points from customers where customer_id = 1;
+
+-- session 2
+start transaction;
+update customers set points = points + 10 where customer_id = 1;
+commit;
+```
+
+#### 6.4.2 Read Committed
+
+不可重复读演示：
+
+```sql
+-- session 1
+set transaction isolation level read committed;
+start transaction;
+select points from customers where customer_id = 1;
+select points from customers where customer_id = 1;
+commit;
+
+-- session 2
+start transaction;
+update customers set points = points + 10 where customer_id = 1;
+commit;
+```
+
+#### 6.4.3  Repeatable Reads
+
+幻读演示（MySQL 8.0的RR解决了幻读）：
+
+```sql
+-- session 1
+set transaction isolation level repeatable read;
+start transaction;
+select * from customers where state = 'VA';
+commit;
+
+-- session 2
+start transaction;
+update customers set state = 'VA' where customer_id = 1;
+commit;
+```
+
+#### 6.4.4 Serializable
+
+```sql
+-- session 1
+set transaction isolation level serializable;
+start transaction;
+select * from customers where state = 'VA';
+commit;
+
+-- session 2
+start transaction;
+update customers set state = 'VA' where customer_id = 1;
+commit;
+```
+
+### 6.5 死锁
+
+`Dead Lock`，死锁发生在所有事务都无法完成的情况下，因为每一个事务都持有另一个事务所需要的锁。所有事务都让对方等待，不会释放自己的锁。
+
+```sql
+-- session 1
+start transaction;
+update customers set state = 'VA' where customer_id = 1;
+update orders set status = 1 where order_id = 1;
+commit;
+
+-- session 2
+start transaction;
+update orders set status = 1 where order_id = 1;
+update customers set state = 'VA' where customer_id = 1;
+commit;
+
+-- MySQL在遇到deadlock的时候，会自动回滚2个事务
+```
+
+
+
+## 7、数据库设计
+
+### 71 数据建模
+
+设计一个数据保存到数据库的过程，包含以下4个步骤：
+
+1. 理解并分析需求（充分与产品经理、行业专家、终端客户进行交流）
+2. 概念性建模：将业务中的事物和事情具体化，并将它们的关系确定下来。概念性建模是业务的一个可视化表现，它可以帮助你和各种业务需求保持一致。
+3. 逻辑化建模：不受数据库语言约束的抽象模型，它只展示表和列
+4. 实体建模：某个特定数据库系统中用来实现逻辑建模的实践，它需要用到具体的数据类型
+
+### 7.2 概念性建模
+
+创建一个网站用来销售在线课程：一个用户可以创建账户，并且订购若干课程；每门课有各种标签，比如前段或者后端。
+
+首先用概念性模型来表示实体、或者事物、需求中的概念以及他们彼此的关系。
+
+这样的概念，比如有：学生 / 课程等，我们需要一个方式来将这些实体可视化，可以使用`ER图`或者`UML`
+
+Entity：实体
+
+Relation：关系
+
+![image-20210725210958278](images/image-20210725210958278.png)
+
+我们用它来理解需求，并和产品经理沟通
+
+> 建模是一个迭代的过程，我们不可能第一次就设计出完美的结构，需要在需求和设计之间往复并不断调整
+
+### 7.3 逻辑化建模
+
+逻辑化建模，是独立于特定的数据库系统的，它是一种抽象的描述，来表示实体和数据结构的关系，因此比概念性建模细节更多
+
+![image-20210725212826186](images/image-20210725212826186.png)
+
+### 7.5 实体建模
+
+实体建模，就是某个特定的数据库系统对逻辑建模的实现
+
+![image-20210725221248319](images/image-20210725221248319.png)
+
+`Primary Key`主键，就是一个字段，唯一标识了表中的每一条记录
+
+`Foreign Key`外键，就是在一个表中，引用了父表的某一列（一般是主键）数据
+
+`Foreign Key Constraints`外键约束
+
+![image-20210725220358813](images/image-20210725220358813.png)
+
+![image-20210725220602390](images/image-20210725220602390.png)
+
+- cascade：级联，表示当父表被引用的列发生了更新，子表是否跟着一起进行相应的更新
+- no action：父表变化，子表不做任何反应
+- set null：父表变化，子表对应的字段值设置为null
+
+
+
+### 7.6 数据库规范化
+
+数据库规范化/归一化，是检查我们设计数据库设计的一个过程，能确保我们遵守了杜绝重复数据所需的某些原则。通常有7条规则，或者说7个范式，每个规则都假设已经实现了前一规则，我们只需要做到前3个范式就行了。
+
+1. 第一范式：每个单元格都应该是单一值（标量），并且列的值尽量不重复
+
+   `courses`的tags列不太符合这个范式
+
+   ![image-20210727203849407](images/image-20210727203849407.png)
+
+   > 查询课程编号为1的课程基本信息以及它对应的tags
+
+   ```sql
+   select * from courses
+   	join course_tags using(course_id)
+   	join tags using(tag_id)
+   	where course_id = 1;
+   ```
+
+   
+
+2. 第二范式：没有依赖任何关系的其它子集的非主键字段。通俗来说，即是，每个表都应该是单一功能的，它能且仅能表示一个实体，这个表的所有字段都是用来描述这个特定实体的。
+
+   ![image-20210727205420318](images/image-20210727205420318.png)
+
+3. 第三范式：所有表中的字段都只依赖主键，与任何其它的字段值无关。即，一个表中的字段不应该由表中的其它字段推导而来。
+
+### 7.7 创建数据库相关工具集
+
+创建数据库：Database -> Forward Engineer
+
+同步模型：Database -> Synchronize Model
+
+反转引擎：Database -> Reverse Engineer
+
+### 7.8 Project
+
+![image-20210727213649998](images/image-20210727213649998.png)
+
+航班Flight / 乘客Passenger / 航空公司Airline / 机场Airport / 机票Ticket
+
+### 7.9 DDL
+
+#### 7.9.1 创建数据库
+
+```sql
+create database if not exists sql_store2;
+
+drop database if exists sql_test1;
+```
+
+#### 7.9.2 创建与修改表
+
+```sql
+drop table if exists customers;
+create table if not exists customers
+(
+  customer_id int primary key auto_increment,
+  first_name varchar(50) not null,
+  points int not null default 0,
+  email varchar(255) not null unique
+);
+
+-- 修改表
+alter table customers
+	add last_name varchar(50) not null after first_name,
+	add city varchar(50) not null,
+	modify column first_name varchar(50) default 'xxx',
+	drop points;
+	
+-- 创建关系
+create table orders
+(
+	order_id int primary key,
+  customer_id int not null,
+  foreign key fk_orders_customers (customer_id) 
+  	references customers (customer_id)
+  	on update cascade
+  	on delete no action
+)
+```
+
+
+
+#### 7.9.3 主外键约束
+
+```sql
+alter table orders
+	add primary key (order_id),
+	drop primary key,
+	drop foreign key fk_orders_customers,
+	add foreign key fk_orders_customers (customer_id)
+		references customers (customer_id)
+		on update cascade
+		on delete no action;
+```
+
+#### 7.9.4 字符集
+
+```sql
+show charset;
+-- utf8支持绝大多数语言
+-- collation约定字符集中的字符是如何排序的
+
+create database db_name character set utf8mb4;
+alter database db_name character set utf8;
+
+create table tb_name() character set utf8;
+alter table tb_name character set utf8;
+
+create table tb_name
+(
+  name varchar(50) character set utf8 not null
+)
+```
+
+### 7.10 存储引擎
+
+不同的引擎取决于我们要保存什么数据，或者我们需要使用什么功能
+
+```sql
+show engines;
+```
+
+常见的2个存储引擎
+
+- MyISAM：较老，5.5以前用的比较主流
+
+- InnoDB：现今主流，支持事务
+
+```sql
+alter table customers engine = innodb;
+```
+
+
+
+### 7.11 DML、DDL以及DCL
+
+- DML（data manipulation language）是数据操纵语言：它们是SELECT、UPDATE、INSERT、DELETE，就象它的名字一样，这4条命令是用来对数据库里的数据进行操作的语言。
+
+- DDL（data definition language）是数据定义语言：DDL比DML要多，主要的命令有CREATE、ALTER、DROP等，DDL主要是用在定义或改变表（TABLE）的结构，数据类型，表之间的链接和约束等初始化工作上，他们大多在建立表时使用。
+
+- DCL（DataControlLanguage）是数据库控制语言：是用来设置或更改数据库用户或角色权限的语句，包括（grant,deny,revoke等）语句。
+
+
+
 
 
 
